[gd_scene load_steps=6 format=3 uid="uid://bh32t266dnj1"]

[ext_resource type="Texture2D" uid="uid://bqxnqdfsimxhw" path="res://Assets/Background2.png" id="1_4250a"]
[ext_resource type="Script" uid="uid://rxwqel5cbx44" path="res://settings.gd" id="1_qhr8d"]
[ext_resource type="FontFile" uid="uid://dsl5awgy80aev" path="res://NightsideDemoRegular.ttf" id="2_xknt6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ykye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gc0em"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qhr8d")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(-4.5, -1.50002)
scale = Vector2(1.88079, 2.55131)
texture = ExtResource("1_4250a")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -967.0
offset_top = -556.0
offset_right = 973.0
offset_bottom = 549.0
color = Color(0, 0.15259, 0.163344, 0.623529)
metadata/_edit_use_anchors_ = true

[node name="Logo" type="Label" parent="."]
offset_left = -494.0
offset_top = -408.0
offset_right = 487.0
offset_bottom = -142.0
theme_override_fonts/font = ExtResource("2_xknt6")
theme_override_font_sizes/font_size = 200
text = "WraithLight"
metadata/_edit_use_anchors_ = true

[node name="Music" type="Label" parent="."]
offset_left = -394.0
offset_top = -110.0
offset_right = -181.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("2_xknt6")
theme_override_font_sizes/font_size = 90
text = "Music"
metadata/_edit_use_anchors_ = true

[node name="MusicSlider" type="HSlider" parent="Music"]
layout_mode = 0
offset_left = 272.0
offset_top = 5.0
offset_right = 463.0
offset_bottom = 26.0
scale = Vector2(1.92, 2.2)
max_value = 30.0
value = 10.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = -81.0
offset_top = 300.0
offset_right = 97.0
offset_bottom = 415.0
theme_override_fonts/font = ExtResource("2_xknt6")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ykye")
text = "Back"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="."]
offset_left = -65.0
offset_top = 440.0
offset_right = 65.0
offset_bottom = 555.0
theme_override_fonts/font = ExtResource("2_xknt6")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_gc0em")
text = "Quit"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Sound" type="Label" parent="."]
offset_left = -394.0
offset_top = 45.0
offset_right = -158.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("2_xknt6")
theme_override_font_sizes/font_size = 90
text = "Sound"
metadata/_edit_use_anchors_ = true

[node name="SoundSlider2" type="HSlider" parent="Sound"]
layout_mode = 0
offset_left = 272.0
offset_top = -3.05176e-05
offset_right = 463.0
offset_bottom = 21.0
scale = Vector2(1.92, 2.2)
max_value = 40.0
value = 10.0
metadata/_edit_use_anchors_ = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D" parent="."]

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 328.0
offset_top = 328.0
offset_right = 657.0
offset_bottom = 446.0
theme_override_font_sizes/font_size = 80
text = "ToGame"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
